{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 93,
  "lineage": "bc3df14d-c91a-e9c8-1e92-aab157477f3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb1825a2feaffb94",
            "arn": "arn:aws:ec2:us-east-1:000000000000:elastic-ip/eipalloc-0fb1825a2feaffb94",
            "association_id": "eipassoc-ac0168c497d19f91e",
            "domain": "vpc",
            "id": "eipalloc-0fb1825a2feaffb94",
            "network_interface": "eni-834c0d3dbd1832a36",
            "private_dns": "ip-10-184-247-224.ec2.internal",
            "private_ip": "10.184.247.224",
            "public_dns": "ec2-127-61-145-66.compute-1.amazonaws.com",
            "public_ip": "127.61.145.66",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 1",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 1",
              "Project": "practice-proj"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-635b1f02ddd9833ba",
            "arn": "arn:aws:ec2:us-east-1:000000000000:elastic-ip/eipalloc-635b1f02ddd9833ba",
            "association_id": "eipassoc-5a957c871b5b42e8b",
            "domain": "vpc",
            "id": "eipalloc-635b1f02ddd9833ba",
            "network_interface": "eni-f949b06bf7c24ea77",
            "private_dns": "ip-10-107-245-0.ec2.internal",
            "private_ip": "10.107.245.0",
            "public_dns": "ec2-127-153-1-0.compute-1.amazonaws.com",
            "public_ip": "127.153.1.0",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 2",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 2",
              "Project": "practice-proj"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-30d7f77567be43092",
            "arn": "arn:aws:ec2:us-east-1:000000000000:elastic-ip/eipalloc-30d7f77567be43092",
            "association_id": "eipassoc-3271cef74f5cb0ac6",
            "domain": "vpc",
            "id": "eipalloc-30d7f77567be43092",
            "network_interface": "eni-24032b1754a5a5a61",
            "private_dns": "ip-10-235-174-65.ec2.internal",
            "private_ip": "10.235.174.65",
            "public_dns": "ec2-127-66-176-72.compute-1.amazonaws.com",
            "public_ip": "127.66.176.72",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 3",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Elastic IP for NAT Gateway 3",
              "Project": "practice-proj"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-8bae380fec3bba504",
            "id": "igw-8bae380fec3bba504",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Test VPC GW",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Test VPC GW",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb1825a2feaffb94",
            "connectivity_type": "public",
            "id": "nat-7b0e5f5bf9ae83431",
            "region": "us-east-1",
            "subnet_id": "subnet-3268e9aa8f226619b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 1",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 1",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-635b1f02ddd9833ba",
            "connectivity_type": "public",
            "id": "nat-e62fbaf75fe020ee5",
            "region": "us-east-1",
            "subnet_id": "subnet-960274e75583835c5",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 2",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 2",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-30d7f77567be43092",
            "connectivity_type": "public",
            "id": "nat-5fe83bcbbd5710d33",
            "region": "us-east-1",
            "subnet_id": "subnet-e6d3f7ac63e67f3f3",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 3",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "NAT Gateway for Public Subnet 3",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-5357c38a51c865da5",
            "id": "rtb-5357c38a51c865da5",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-7b0e5f5bf9ae83431",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 1",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 1",
              "Project": "practice-proj"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-5357c38a51c865da5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-04c93b7bb1e76ea8b",
            "id": "rtb-04c93b7bb1e76ea8b",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-e62fbaf75fe020ee5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 2",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 2",
              "Project": "practice-proj"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-04c93b7bb1e76ea8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-be46bbc7bd79339b1",
            "id": "rtb-be46bbc7bd79339b1",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-5fe83bcbbd5710d33",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 3",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Private Subnet 3",
              "Project": "practice-proj"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-be46bbc7bd79339b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-b55aeb123d373bde4",
            "id": "rtb-b55aeb123d373bde4",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-8bae380fec3bba504",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Public Subnets",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Route Table for Public Subnets",
              "Project": "practice-proj"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-b55aeb123d373bde4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069726d48b6ea77d8",
            "region": "us-east-1",
            "route_table_id": "rtb-5357c38a51c865da5",
            "subnet_id": "subnet-fe5fdb0205688dde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-39e7f8a596dfdc908",
            "region": "us-east-1",
            "route_table_id": "rtb-04c93b7bb1e76ea8b",
            "subnet_id": "subnet-6079867b2680cbca9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-63a4f5cb0945a7c65",
            "region": "us-east-1",
            "route_table_id": "rtb-be46bbc7bd79339b1",
            "subnet_id": "subnet-71e4553df9a2039d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06991b19e400244a4",
            "region": "us-east-1",
            "route_table_id": "rtb-b55aeb123d373bde4",
            "subnet_id": "subnet-3268e9aa8f226619b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f35cd91484c769bf",
            "region": "us-east-1",
            "route_table_id": "rtb-b55aeb123d373bde4",
            "subnet_id": "subnet-960274e75583835c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-9904b53aafebeaf84",
            "region": "us-east-1",
            "route_table_id": "rtb-b55aeb123d373bde4",
            "subnet_id": "subnet-e6d3f7ac63e67f3f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-fe5fdb0205688dde1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-fe5fdb0205688dde1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 1",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-fe5fdb0205688dde1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-6079867b2680cbca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-6079867b2680cbca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 2",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 2",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-6079867b2680cbca9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-71e4553df9a2039d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-71e4553df9a2039d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 3",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Private Subnet 3",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-71e4553df9a2039d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-3268e9aa8f226619b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-3268e9aa8f226619b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-3268e9aa8f226619b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-960274e75583835c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-960274e75583835c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 2",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 2",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-960274e75583835c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-e6d3f7ac63e67f3f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e6d3f7ac63e67f3f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 3",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 3",
              "Project": "practice-proj"
            },
            "vpc_id": "vpc-5ad1f4d727376739b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-e6d3f7ac63e67f3f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-5ad1f4d727376739b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-1a79f5255527595ba",
            "default_route_table_id": "rtb-5580a98de257bbdec",
            "default_security_group_id": "sg-ebb2edacb49a1fc0c",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-5ad1f4d727376739b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-5580a98de257bbdec",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Practice Project",
              "Project": "practice-proj"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Practice Project",
              "Project": "practice-proj"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "vpc-5ad1f4d727376739b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}